first/src/firstParser.java
// $ANTLR 3.5.1 D:\\JAVA\\first\\src\\first.g 2014-04-03 22:12:53

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class firstParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARGUMENT", "COMMENT", "Dec", 
		"FUNC_DECL", "Header", "Hex", "INDEX", "LINE_COMMENT", "METHOD", "Nice_character_constant", 
		"Nice_identifier", "Nice_string", "Oct", "POINTER", "POSTADD", "POSTUNDERLINE", 
		"PREADD", "PREUNDERLINE", "TYPE_DECL", "VAR_DECL", "WS", "'!'", "'!='", 
		"'%'", "'%='", "'&&'", "'&'", "'&='", "'('", "')'", "'*'", "'*='", "'+'", 
		"'++'", "'+='", "','", "'.'", "'/'", "'/='", "';'", "'<'", "'<<'", "'<<='", 
		"'<='", "'='", "'=='", "'>'", "'>='", "'>>'", "'>>='", "'['", "']'", "'^'", 
		"'^='", "'_'", "'_='", "'_>'", "'__'", "'break'", "'char'", "'continue'", 
		"'else'", "'for'", "'if'", "'int'", "'return'", "'sizeof'", "'struct'", 
		"'union'", "'void'", "'while'", "'{'", "'|'", "'|='", "'||'", "'}'", "'~'"
	};
	public static final int EOF=-1;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int ARGUMENT=4;
	public static final int COMMENT=5;
	public static final int Dec=6;
	public static final int FUNC_DECL=7;
	public static final int Header=8;
	public static final int Hex=9;
	public static final int INDEX=10;
	public static final int LINE_COMMENT=11;
	public static final int METHOD=12;
	public static final int Nice_character_constant=13;
	public static final int Nice_identifier=14;
	public static final int Nice_string=15;
	public static final int Oct=16;
	public static final int POINTER=17;
	public static final int POSTADD=18;
	public static final int POSTUNDERLINE=19;
	public static final int PREADD=20;
	public static final int PREUNDERLINE=21;
	public static final int TYPE_DECL=22;
	public static final int VAR_DECL=23;
	public static final int WS=24;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public firstParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public firstParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return firstParser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\JAVA\\first\\src\\first.g"; }


	public static class prog_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// D:\\JAVA\\first\\src\\first.g:27:1: prog : program EOF !;
	public final firstParser.prog_return prog() throws RecognitionException {
		firstParser.prog_return retval = new firstParser.prog_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope program1 =null;

		CommonTree EOF2_tree=null;

		try {
			// D:\\JAVA\\first\\src\\first.g:27:5: ( program EOF !)
			// D:\\JAVA\\first\\src\\first.g:27:8: program EOF !
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_program_in_prog146);
			program1=program();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, program1.getTree());

			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_prog148); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "prog"


	public static class program_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "program"
	// D:\\JAVA\\first\\src\\first.g:29:1: program : ( declaration | function_definition )+ ;
	public final firstParser.program_return program() throws RecognitionException {
		firstParser.program_return retval = new firstParser.program_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope declaration3 =null;
		ParserRuleReturnScope function_definition4 =null;


		try {
			// D:\\JAVA\\first\\src\\first.g:29:9: ( ( declaration | function_definition )+ )
			// D:\\JAVA\\first\\src\\first.g:30:3: ( declaration | function_definition )+
			{
			root_0 = (CommonTree)adaptor.nil();


			// D:\\JAVA\\first\\src\\first.g:30:3: ( declaration | function_definition )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=3;
				switch ( input.LA(1) ) {
				case 73:
					{
					int LA1_2 = input.LA(2);
					if ( (synpred1_first()) ) {
						alt1=1;
					}
					else if ( (synpred2_first()) ) {
						alt1=2;
					}

					}
					break;
				case 63:
					{
					int LA1_3 = input.LA(2);
					if ( (synpred1_first()) ) {
						alt1=1;
					}
					else if ( (synpred2_first()) ) {
						alt1=2;
					}

					}
					break;
				case 68:
					{
					int LA1_4 = input.LA(2);
					if ( (synpred1_first()) ) {
						alt1=1;
					}
					else if ( (synpred2_first()) ) {
						alt1=2;
					}

					}
					break;
				case 71:
				case 72:
					{
					int LA1_5 = input.LA(2);
					if ( (synpred1_first()) ) {
						alt1=1;
					}
					else if ( (synpred2_first()) ) {
						alt1=2;
					}

					}
					break;
				}
				switch (alt1) {
				case 1 :
					// D:\\JAVA\\first\\src\\first.g:30:5: declaration
					{
					pushFollow(FOLLOW_declaration_in_program164);
					declaration3=declaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, declaration3.getTree());

					}
					break;
				case 2 :
					// D:\\JAVA\\first\\src\\first.g:30:19: function_definition
					{
					pushFollow(FOLLOW_function_definition_in_program168);
					function_definition4=function_definition();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, function_definition4.getTree());

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class declaration_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// D:\\JAVA\\first\\src\\first.g:32:1: declaration : type_specifier ( init_declarators )? ';' -> ^( VAR_DECL ^( TYPE_DECL type_specifier ) ( init_declarators )? ) ;
	public final firstParser.declaration_return declaration() throws RecognitionException {
		firstParser.declaration_return retval = new firstParser.declaration_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal7=null;
		ParserRuleReturnScope type_specifier5 =null;
		ParserRuleReturnScope init_declarators6 =null;

		CommonTree char_literal7_tree=null;
		RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
		RewriteRuleSubtreeStream stream_init_declarators=new RewriteRuleSubtreeStream(adaptor,"rule init_declarators");
		RewriteRuleSubtreeStream stream_type_specifier=new RewriteRuleSubtreeStream(adaptor,"rule type_specifier");

		try {
			// D:\\JAVA\\first\\src\\first.g:32:12: ( type_specifier ( init_declarators )? ';' -> ^( VAR_DECL ^( TYPE_DECL type_specifier ) ( init_declarators )? ) )
			// D:\\JAVA\\first\\src\\first.g:32:14: type_specifier ( init_declarators )? ';'
			{
			pushFollow(FOLLOW_type_specifier_in_declaration177);
			type_specifier5=type_specifier();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_type_specifier.add(type_specifier5.getTree());
			// D:\\JAVA\\first\\src\\first.g:32:29: ( init_declarators )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==Nice_identifier||LA2_0==34) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// D:\\JAVA\\first\\src\\first.g:32:29: init_declarators
					{
					pushFollow(FOLLOW_init_declarators_in_declaration179);
					init_declarators6=init_declarators();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_init_declarators.add(init_declarators6.getTree());
					}
					break;

			}

			char_literal7=(Token)match(input,43,FOLLOW_43_in_declaration182); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_43.add(char_literal7);

			// AST REWRITE
			// elements: type_specifier, init_declarators
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 32:51: -> ^( VAR_DECL ^( TYPE_DECL type_specifier ) ( init_declarators )? )
			{
				// D:\\JAVA\\first\\src\\first.g:32:54: ^( VAR_DECL ^( TYPE_DECL type_specifier ) ( init_declarators )? )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VAR_DECL, "VAR_DECL"), root_1);
				// D:\\JAVA\\first\\src\\first.g:32:65: ^( TYPE_DECL type_specifier )
				{
				CommonTree root_2 = (CommonTree)adaptor.nil();
				root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(TYPE_DECL, "TYPE_DECL"), root_2);
				adaptor.addChild(root_2, stream_type_specifier.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				// D:\\JAVA\\first\\src\\first.g:32:93: ( init_declarators )?
				if ( stream_init_declarators.hasNext() ) {
					adaptor.addChild(root_1, stream_init_declarators.nextTree());
				}
				stream_init_declarators.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class function_definition_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "function_definition"
	// D:\\JAVA\\first\\src\\first.g:34:1: function_definition : type_specifier plain_declarator '(' ( parameters )? ')' compound_statement -> ^( FUNC_DECL ^( TYPE_DECL type_specifier ) plain_declarator ( parameters )? compound_statement ) ;
	public final firstParser.function_definition_return function_definition() throws RecognitionException {
		firstParser.function_definition_return retval = new firstParser.function_definition_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal10=null;
		Token char_literal12=null;
		ParserRuleReturnScope type_specifier8 =null;
		ParserRuleReturnScope plain_declarator9 =null;
		ParserRuleReturnScope parameters11 =null;
		ParserRuleReturnScope compound_statement13 =null;

		CommonTree char_literal10_tree=null;
		CommonTree char_literal12_tree=null;
		RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
		RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
		RewriteRuleSubtreeStream stream_plain_declarator=new RewriteRuleSubtreeStream(adaptor,"rule plain_declarator");
		RewriteRuleSubtreeStream stream_type_specifier=new RewriteRuleSubtreeStream(adaptor,"rule type_specifier");
		RewriteRuleSubtreeStream stream_parameters=new RewriteRuleSubtreeStream(adaptor,"rule parameters");
		RewriteRuleSubtreeStream stream_compound_statement=new RewriteRuleSubtreeStream(adaptor,"rule compound_statement");

		try {
			// D:\\JAVA\\first\\src\\first.g:34:20: ( type_specifier plain_declarator '(' ( parameters )? ')' compound_statement -> ^( FUNC_DECL ^( TYPE_DECL type_specifier ) plain_declarator ( parameters )? compound_statement ) )
			// D:\\JAVA\\first\\src\\first.g:34:22: type_specifier plain_declarator '(' ( parameters )? ')' compound_statement
			{
			pushFollow(FOLLOW_type_specifier_in_function_definition205);
			type_specifier8=type_specifier();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_type_specifier.add(type_specifier8.getTree());
			pushFollow(FOLLOW_plain_declarator_in_function_definition207);
			plain_declarator9=plain_declarator();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_plain_declarator.add(plain_declarator9.getTree());
			char_literal10=(Token)match(input,32,FOLLOW_32_in_function_definition209); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_32.add(char_literal10);

			// D:\\JAVA\\first\\src\\first.g:34:58: ( parameters )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==63||LA3_0==68||(LA3_0 >= 71 && LA3_0 <= 73)) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// D:\\JAVA\\first\\src\\first.g:34:58: parameters
					{
					pushFollow(FOLLOW_parameters_in_function_definition211);
					parameters11=parameters();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_parameters.add(parameters11.getTree());
					}
					break;

			}

			char_literal12=(Token)match(input,33,FOLLOW_33_in_function_definition214); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_33.add(char_literal12);

			pushFollow(FOLLOW_compound_statement_in_function_definition216);
			compound_statement13=compound_statement();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_compound_statement.add(compound_statement13.getTree());
			// AST REWRITE
			// elements: parameters, type_specifier, plain_declarator, compound_statement
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 34:93: -> ^( FUNC_DECL ^( TYPE_DECL type_specifier ) plain_declarator ( parameters )? compound_statement )
			{
				// D:\\JAVA\\first\\src\\first.g:34:96: ^( FUNC_DECL ^( TYPE_DECL type_specifier ) plain_declarator ( parameters )? compound_statement )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FUNC_DECL, "FUNC_DECL"), root_1);
				// D:\\JAVA\\first\\src\\first.g:34:108: ^( TYPE_DECL type_specifier )
				{
				CommonTree root_2 = (CommonTree)adaptor.nil();
				root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(TYPE_DECL, "TYPE_DECL"), root_2);
				adaptor.addChild(root_2, stream_type_specifier.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_1, stream_plain_declarator.nextTree());
				// D:\\JAVA\\first\\src\\first.g:34:155: ( parameters )?
				if ( stream_parameters.hasNext() ) {
					adaptor.addChild(root_1, stream_parameters.nextTree());
				}
				stream_parameters.reset();

				adaptor.addChild(root_1, stream_compound_statement.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function_definition"


	public static class parameters_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "parameters"
	// D:\\JAVA\\first\\src\\first.g:36:1: parameters : plain_declaration ( ',' ! plain_declaration )* ;
	public final firstParser.parameters_return parameters() throws RecognitionException {
		firstParser.parameters_return retval = new firstParser.parameters_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal15=null;
		ParserRuleReturnScope plain_declaration14 =null;
		ParserRuleReturnScope plain_declaration16 =null;

		CommonTree char_literal15_tree=null;

		try {
			// D:\\JAVA\\first\\src\\first.g:36:11: ( plain_declaration ( ',' ! plain_declaration )* )
			// D:\\JAVA\\first\\src\\first.g:36:13: plain_declaration ( ',' ! plain_declaration )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_plain_declaration_in_parameters245);
			plain_declaration14=plain_declaration();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, plain_declaration14.getTree());

			// D:\\JAVA\\first\\src\\first.g:36:31: ( ',' ! plain_declaration )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==39) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// D:\\JAVA\\first\\src\\first.g:36:32: ',' ! plain_declaration
					{
					char_literal15=(Token)match(input,39,FOLLOW_39_in_parameters248); if (state.failed) return retval;
					pushFollow(FOLLOW_plain_declaration_in_parameters251);
					plain_declaration16=plain_declaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, plain_declaration16.getTree());

					}
					break;

				default :
					break loop4;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "parameters"


	public static class declarators_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "declarators"
	// D:\\JAVA\\first\\src\\first.g:38:1: declarators : declarator ( ',' ! declarator )* ;
	public final firstParser.declarators_return declarators() throws RecognitionException {
		firstParser.declarators_return retval = new firstParser.declarators_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal18=null;
		ParserRuleReturnScope declarator17 =null;
		ParserRuleReturnScope declarator19 =null;

		CommonTree char_literal18_tree=null;

		try {
			// D:\\JAVA\\first\\src\\first.g:38:12: ( declarator ( ',' ! declarator )* )
			// D:\\JAVA\\first\\src\\first.g:38:14: declarator ( ',' ! declarator )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_declarator_in_declarators262);
			declarator17=declarator();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, declarator17.getTree());

			// D:\\JAVA\\first\\src\\first.g:38:25: ( ',' ! declarator )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==39) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// D:\\JAVA\\first\\src\\first.g:38:26: ',' ! declarator
					{
					char_literal18=(Token)match(input,39,FOLLOW_39_in_declarators265); if (state.failed) return retval;
					pushFollow(FOLLOW_declarator_in_declarators268);
					declarator19=declarator();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, declarator19.getTree());

					}
					break;

				default :
					break loop5;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declarators"


	public static class init_declarators_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "init_declarators"
	// D:\\JAVA\\first\\src\\first.g:40:1: init_declarators : init_declarator ( ',' ! init_declarator )* ;
	public final firstParser.init_declarators_return init_declarators() throws RecognitionException {
		firstParser.init_declarators_return retval = new firstParser.init_declarators_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal21=null;
		ParserRuleReturnScope init_declarator20 =null;
		ParserRuleReturnScope init_declarator22 =null;

		CommonTree char_literal21_tree=null;

		try {
			// D:\\JAVA\\first\\src\\first.g:40:17: ( init_declarator ( ',' ! init_declarator )* )
			// D:\\JAVA\\first\\src\\first.g:40:19: init_declarator ( ',' ! init_declarator )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_init_declarator_in_init_declarators278);
			init_declarator20=init_declarator();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, init_declarator20.getTree());

			// D:\\JAVA\\first\\src\\first.g:40:35: ( ',' ! init_declarator )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==39) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// D:\\JAVA\\first\\src\\first.g:40:36: ',' ! init_declarator
					{
					char_literal21=(Token)match(input,39,FOLLOW_39_in_init_declarators281); if (state.failed) return retval;
					pushFollow(FOLLOW_init_declarator_in_init_declarators284);
					init_declarator22=init_declarator();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, init_declarator22.getTree());

					}
					break;

				default :
					break loop6;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "init_declarators"

